# vague

./: CLAUDE.md  README.md  gsd-py-implementation-plan.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  skill-authoring.md  telemetry.md
skills/: _preamble.sh
skills/design-consultation/: SKILL.md
skills/design-html/: SKILL.md
skills/design-review/: SKILL.md
skills/design-shotgun/: SKILL.md
skills/investigate/: SKILL.md
skills/learn/: SKILL.md
skills/office-hours/: SKILL.md
skills/plan-ceo-review/: SKILL.md
skills/plan-eng-review/: SKILL.md
skills/retro/: SKILL.md
skills/review/: SKILL.md
skills/ship/: SKILL.md
skills/vault/: SKILL.md
tests/: conftest.py  test_docs.py
tests/test_commands/: test_analytics.py  test_commit.py  test_config.py  test_init.py  test_installer.py  test_learnings.py  test_observations.py  test_skill.py  test_slug.py  test_status.py
tests/test_core/: test_concurrency.py  test_config_core.py  test_frontmatter.py  test_learnings_core.py  test_logging.py  test_observations.py  test_planning.py  test_principles.py
vague/: __init__.py  installer.py  models.py
vague/assets/templates/: SKILL.template.md  instructions-block.md
vague/sdk/: __init__.py  cli.py
vague/sdk/commands/: __init__.py  analytics.py  commit.py  config.py  init.py  learnings.py  observations.py  plan.py  skill.py  slug.py  status.py  timeline.py
vague/sdk/core/: __init__.py  analytics.py  config.py  frontmatter.py  git_ops.py  learnings.py  logging.py  observations.py  planning.py  principles.py  projects.py  (+3 more)
(+33 files in other folders)
