[project]
name = "vague"
version = "0.2.0"
requires-python = ">=3.11"
description = "Python CLI layer for LLM skill-based AI workflows"

dependencies = [
    "typer>=0.12",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.6",
]

[project.scripts]
vague = "vague.sdk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vague"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
